--- a/src/app/non-secure/home/home.component.html
+++ b/src/app/non-secure/home/home.component.html
@@ -1,13 +1,12 @@
 <div class="home_container">
 
-  <div class='col'> 
-    <div>
-      <h2>Skirmesh MILSIM connected</h2>
+  <div class='row'>
+    <div data-aos="fade-up" class="col-12 col-sm-8 text-center welcome p-5">
+      <h2>Skirmesh</h2>
+      <h3>MILSIM connected</h3>
+    </div> 
+    <div class="col-12 col-sm-4">
+      <app-leaderboard></app-leaderboard>
     </div>
-    <div class="leaderboard">
-      <app-leaderboard></app-leaderboard>  
-    </div>
-     
   </div>
 </div>
-
