--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
 
     </div>
 
-    <div class="col-4 my-2">
+    <div class="col">
 
           <div class="row mx-0">
 
@@ -42,7 +42,7 @@
         <div class="row mx-0">
 
               <h2 class="">Lifetime Points</h2>
-              <div class="col">
+              <div class="row">
                 <ngx-charts-advanced-pie-chart
                   [scheme]="colorScheme"
                   [results]="pieData"
@@ -54,7 +54,7 @@
 
         </div>
 
-          <div class="row mx-0" style="margin-top: 2rem;">
+          <div class="row mx-0" style="margin-top: 2rem !important;">
 
                 <h2 class="">Historical Game Stats</h2>
 
