--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,3 +64,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
       background-color:#928b56;
   
   }
+
+  .row {
+  margin: 0px !important;
+  }
